--- a/K7PrakPemrogMobilePerkuliahan/app/build.gradle
+++ b/K7PrakPemrogMobilePerkuliahan/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.k7_prakpemrogmobile_perkuliahan"
-        minSdk 24
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -85,4 +85,8 @@ dependencies {
     implementation "com.github.skydoves:whatif:1.0.7"
 //  compose
     implementation "androidx.navigation:navigation-compose:2.5.3"
+
+// Dialogs
+    implementation "io.github.vanpra.compose-material-dialogs:core:0.9.0"
+    implementation "io.github.vanpra.compose-material-dialogs:datetime:0.9.0"
 }
