--- a/K7PrakPemrogMobilePerkuliahan/local.properties
+++ b/K7PrakPemrogMobilePerkuliahan/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 26 16:46:05 ICT 2023
-sdk.dir=C\:\\Users\\ASUS GL503GE\\AppData\\Local\\Android\\Sdk
+#Sat May 27 16:18:57 ICT 2023
+sdk.dir=C\:\\Users\\BAHRUL'S\\AppData\\Local\\Android\\Sdk
