--- a/K7PrakPemrogMobilePerkuliahan/app/build.gradle
+++ b/K7PrakPemrogMobilePerkuliahan/app/build.gradle
@@ -89,4 +89,6 @@ dependencies {
 // Dialogs
     implementation "io.github.vanpra.compose-material-dialogs:core:0.9.0"
     implementation "io.github.vanpra.compose-material-dialogs:datetime:0.9.0"
+//    splash screen
+    implementation("androidx.navigation:navigation-compose:2.5.3-alpha09")
 }
