--- a/K7PrakPemrogMobilePerkuliahan/local.properties
+++ b/K7PrakPemrogMobilePerkuliahan/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun May 28 13:02:48 ICT 2023
-sdk.dir=C\:\\Users\\LENOVO\\AppData\\Local\\Android\\Sdk
+#Thu Jun 08 20:17:55 ICT 2023
+sdk.dir=C\:\\Users\\ASUS GL503GE\\AppData\\Local\\Android\\Sdk
