perbaiki form input mahasiswa agar nidn input dibatasi dan beberapa placeholder, dosen memperbaiki placeholder form

--- a/K7PrakPemrogMobilePerkuliahan/local.properties
+++ b/K7PrakPemrogMobilePerkuliahan/local.properties
@@ -5,4 +5,7 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Jun 09 08:42:12 ICT 2023
-sdk.dir=C\:\\Users\\LENOVO\\AppData\\Local\\Android\\Sdk
+#agung
+#sdk.dir=C\:\\Users\\LENOVO\\AppData\\Local\\Android\\Sdk
+#anam
+sdk.dir=C\:\\Users\\ASUS GL503GE\\AppData\\Local\\Android\\Sdk
