--- a/K7PrakPemrogMobilePerkuliahan/local.properties
+++ b/K7PrakPemrogMobilePerkuliahan/local.properties
@@ -4,8 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 09 08:42:12 ICT 2023
-#agung
-#sdk.dir=C\:\\Users\\LENOVO\\AppData\\Local\\Android\\Sdk
-#anam
-sdk.dir=C\:\\Users\\ASUS GL503GE\\AppData\\Local\\Android\\Sdk
+#Thu Jun 15 11:16:42 ICT 2023
+sdk.dir=C\:\\Users\\LENOVO\\AppData\\Local\\Android\\Sdk
