buat card pada tampilan matkul, merubah placeholder pada form dosen mahasiswa dan matkul

--- a/K7PrakPemrogMobilePerkuliahan/local.properties
+++ b/K7PrakPemrogMobilePerkuliahan/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Jun 15 11:16:42 ICT 2023
-sdk.dir=C\:\\Users\\LENOVO\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\LENOVO\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\ASUS GL503GE\\AppData\\Local\\Android\\Sdk
